--- a/package.json
+++ b/package.json
@@ -14,9 +14,30 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.31",
+    "@fortawesome/free-brands-svg-icons": "^5.15.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "airtable": "^0.10.0",
+    "antd": "^4.6.5",
+    "babel-plugin-styled-components": "^1.11.1",
+    "bootstrap": "^4.5.2",
     "gatsby": "^2.24.63",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-antd": "^2.2.0",
+    "gatsby-plugin-sharp": "^2.6.40",
+    "gatsby-plugin-styled-components": "^3.3.11",
+    "gatsby-source-filesystem": "^2.3.34",
+    "gatsby-transformer-sharp": "^2.5.17",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^6.8.6",
+    "react-hover-slideshow": "^2.1.10",
+    "react-responsive-carousel": "^3.2.10",
+    "react-scrollspy": "^3.4.3",
+    "react-stonecutter": "^0.3.10",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "prettier": "2.1.1"
