--- a/package.json
+++ b/package.json
@@ -14,30 +14,35 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.31",
-    "@fortawesome/free-brands-svg-icons": "^5.15.0",
-    "@fortawesome/free-solid-svg-icons": "^5.15.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "airtable": "^0.10.0",
-    "antd": "^4.6.5",
-    "babel-plugin-styled-components": "^1.11.1",
-    "bootstrap": "^4.5.2",
-    "gatsby": "^2.24.63",
-    "gatsby-image": "^2.4.21",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@popperjs/core": "^2.6.0",
+    "airtable": "^0.10.1",
+    "antd": "^4.10.1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "bootstrap": "^4.5.3",
+    "gatsby": "^2.30.1",
+    "gatsby-image": "^2.9.0",
     "gatsby-plugin-antd": "^2.2.0",
-    "gatsby-plugin-sharp": "^2.6.40",
-    "gatsby-plugin-styled-components": "^3.3.11",
-    "gatsby-source-filesystem": "^2.3.34",
-    "gatsby-transformer-sharp": "^2.5.17",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.12.0",
-    "react-hook-form": "^6.8.6",
-    "react-hover-slideshow": "^2.1.10",
-    "react-responsive-carousel": "^3.2.10",
+    "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-source-netlify-cms": "^0.10.5",
+    "gatsby-transformer-sharp": "^2.10.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^16.14.0",
+    "react-hook-form": "^6.14.1",
+    "react-hover-slideshow": "^2.1.12",
+    "react-responsive-carousel": "^3.2.11",
     "react-scrollspy": "^3.4.3",
     "react-stonecutter": "^0.3.10",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.1",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "prettier": "2.1.1"
