--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "antd": "^4.10.1",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.5.3",
-    "gatsby": "^2.30.1",
+    "gatsby": "^2.31.0",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-antd": "^2.2.0",
+    "gatsby-plugin-netlify-cms": "^4.9.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-styled-components": "^3.8.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-netlify-cms": "^0.10.5",
+    "gatsby-transformer-remark": "^2.15.0",
     "gatsby-transformer-sharp": "^2.10.0",
     "jquery": "^3.5.1",
+    "netlify-cms-app": "^2.14.14",
     "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
