--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,10 +1,12 @@
 backend:
   name: git-gateway
   branch: main
+  repo: willkrakow/gatsby-portfolio
 
 publish_mode: editorial_workflow
 
-media_folder: "images/uploads"
+media_folder: "static/images"
+public_folder: "/assets"
 
 collections:
   - name: "projects"
