Netlify is being stupid and redirecting to one of my other hosted sites. Hopefully this fixes it.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,7 @@ collections:
   - name: "articles"
     label: "Articles"
     folder: "_posts/articles"
+    slug: "{{slug}}"
     create: true
     fields:
       - {label: "Published Date", name: "date", widget: "datetime"}
