--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jquery": "^3.5.1",
     "netlify-cms-app": "^2.14.14",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.14.0",
