--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
-  branch: main
   repo: willkrakow/gatsby-portfolio
+  branch: main
 
 publish_mode: editorial_workflow
 
@@ -13,20 +13,25 @@ collections:
     label: "Projects"
     folder: "_posts/projects"
     create: true
-    slug: "{{slug}}"
+    slug: "{{title}}"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "project"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Tech Stack", name: "stack", widget: "select", multiple: true, options: ["React", "Gatsby", "Shopify", "Python", "Bootstrap", "Netlify", "VanillaJS"]}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Slug", name: "slug", widget: "string", default: "projects/{{slug}}"}
+      - {label: "Source code URL", name: "source", widget: "string", default: "https://github.com/willkrakow"}
+      - {label: "Live site URL", name: "livesite", widget: "string", default: "/"}
   - name: "articles"
     label: "Articles"
     folder: "_posts/articles"
-    slug: "{{slug}}"
+    slug: "{{title}}"
     create: true
     fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "article"}
       - {label: "Published Date", name: "date", widget: "datetime"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}    
+      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Slug", name: "slug", widget: "string", default: "projects/{{slug}}"}
