--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "airtable": "^0.10.1",
     "antd": "^4.10.1",
     "babel-plugin-styled-components": "^1.12.0",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "gatsby": "^2.31.0",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-antd": "^2.2.0",
@@ -30,6 +30,8 @@
     "gatsby-plugin-netlify-cms": "^4.9.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-remark-images": "^3.10.0",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-netlify-cms": "^0.10.5",
     "gatsby-transformer-remark": "^2.15.0",
