--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-netlify-cms": "^4.9.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-plugin-twitter": "^2.9.0",
     "gatsby-remark-images": "^3.10.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.9.0",
