--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-responsive-carousel": "^3.2.11",
     "react-scrollspy": "^3.4.3",
     "react-stonecutter": "^0.3.10",
+    "rehype-react": "^6.2.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3"
   },
