--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,6 +25,17 @@ collections:
       - {label: "Slug", name: "slug", widget: "string", default: "projects/{{title}}"}
       - {label: "Source code URL", name: "source", widget: "string", default: "https://github.com/willkrakow"}
       - {label: "Live site URL", name: "livesite", widget: "string", default: "{{title}}"}
+      - label: "Technologies"
+      name: "technologies"
+      widget: "list"
+      fields:
+        - label: "Technology"
+          name: "tech"
+          widget: "object"
+          fields:
+            - {label: "Name", name: "Name", widget: "string"}
+            - {label: "Type", name: "type", widget: "select", options: ["FontAwesome", "PNG"]}
+            - {label: "Source or class name", name: "srcOrClassName", widget: "string"}
   - name: "articles"
     label: "Articles"
     folder: "_posts/articles"
@@ -39,6 +50,7 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Slug", name: "slug", widget: "string", default: "{{title}}"}
+
   - name: "technologies"
     label: "Technologies"
     folder: "_posts/technologies"
