--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -60,5 +60,5 @@ collections:
     fields:
       - {label: "Technology name", name: "name", widget: "string"}
       - {label: "Icon type", name: "icontype", widget: "select", options: ["Font Awesome Icon", "PNG"], default: "Font Awesome Icon"}
-      - {label: "Font Awesome Class Name", name: "faClassName", widget: "string", default: "fas fa-spinner" required: false}
+      - {label: "Font Awesome Class Name", name: "faClassName", widget: "string", default: "fas fa-spinner", required: false}
       - {label: "PNG source", name: "pngSrc", widget: "string", default: "https://www.jqueryscript.net/images/Minimal-jQuery-Loading-Overlay-Spinner-Plugin-Easy-Overlay.jpg", required: false}
