--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,52 +13,98 @@ collections:
     label: "Projects"
     folder: "_posts/projects"
     create: true
-    media_folder: ''
-    public_folder: ''
+    media_folder: ""
+    public_folder: ""
     slug: "{{title}}"
     fields:
-      - {label: "Layout", name: "layout", widget: "hidden", default: "project"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Tech Stack", name: "stack", widget: "select", multiple: true, options: ["React", "Gatsby", "Shopify", "Python", "Bootstrap", "Netlify", "VanillaJS"]}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Slug", name: "slug", widget: "string", default: "projects/{{title}}"}
-      - {label: "Source code URL", name: "source", widget: "string", default: "https://github.com/willkrakow"}
-      - {label: "Live site URL", name: "livesite", widget: "string", default: "{{title}}"}
-      - label: "Technologies"
-        name: "technologies"
-        widget: "list"
-        fields:
-          - label: "Technology"
-            name: "tech"
-            widget: "object"
-            fields:
-              - {label: "Name", name: "Name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["FontAwesome", "PNG"]}
-              - {label: "Source or class name", name: "srcOrClassName", widget: "string"}
+      - {
+          label: "Layout",
+          name: "layout",
+          widget: "hidden",
+          default: "project",
+        }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Featured Image", name: "thumbnail", widget: "image" }
+      - {
+          label: "Tech Stack",
+          name: "stack",
+          widget: "select",
+          multiple: true,
+          options:
+            [
+              "React",
+              "Gatsby",
+              "Shopify",
+              "Python",
+              "Bootstrap",
+              "Netlify",
+              "VanillaJS",
+            ],
+        }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - {
+          label: "Slug",
+          name: "slug",
+          widget: "string",
+          default: "projects/{{title}}",
+        }
+      - {
+          label: "Source code URL",
+          name: "source",
+          widget: "string",
+          default: "https://github.com/willkrakow",
+        }
+      - {
+          label: "Live site URL",
+          name: "livesite",
+          widget: "string",
+          default: "{{title}}",
+        }
   - name: "articles"
     label: "Articles"
     folder: "_posts/articles"
     slug: "{{title}}"
-    media_folder: ''
-    public_folder: ''
+    media_folder: ""
+    public_folder: ""
     create: true
     fields:
-      - {label: "Layout", name: "layout", widget: "hidden", default: "article"}
-      - {label: "Published Date", name: "date", widget: "datetime"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Slug", name: "slug", widget: "string", default: "{{title}}"}
-
+      - {
+          label: "Layout",
+          name: "layout",
+          widget: "hidden",
+          default: "article",
+        }
+      - { label: "Published Date", name: "date", widget: "datetime" }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Featured Image", name: "thumbnail", widget: "image" }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Slug", name: "slug", widget: "string", default: "{{title}}" }
   - name: "technologies"
     label: "Technologies"
     folder: "_posts/technologies"
     create: true
-    media_folder: ''
-    public_ folder: ''
+    media_folder: ""
+    public_ folder: ""
     fields:
-      - {label: "Technology name", name: "name", widget: "string"}
-      - {label: "Icon type", name: "icontype", widget: "select", options: ["Font Awesome Icon", "PNG"], default: "Font Awesome Icon"}
-      - {label: "Font Awesome Class Name", name: "faClassName", widget: "string", default: "fas fa-spinner", required: false}
-      - {label: "PNG source", name: "pngSrc", widget: "string", default: "https://www.jqueryscript.net/images/Minimal-jQuery-Loading-Overlay-Spinner-Plugin-Easy-Overlay.jpg", required: false}
+      - { label: "Technology name", name: "name", widget: "string" }
+      - {
+          label: "Icon type",
+          name: "icontype",
+          widget: "select",
+          options: ["Font Awesome Icon", "PNG"],
+          default: "Font Awesome Icon",
+        }
+      - {
+          label: "Font Awesome Class Name",
+          name: "faClassName",
+          widget: "string",
+          default: "fas fa-spinner",
+          required: false,
+        }
+      - {
+          label: "PNG source",
+          name: "pngSrc",
+          widget: "string",
+          default: "https://www.jqueryscript.net/images/Minimal-jQuery-Loading-Overlay-Spinner-Plugin-Easy-Overlay.jpg",
+          required: false,
+        }
