Updated site metadata

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,6 +39,7 @@ collections:
               "Bootstrap",
               "Netlify",
               "VanillaJS",
+              "Figma"
             ],
         }
       - { label: "Body", name: "body", widget: "markdown" }
