--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^4.10.1",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.31.0",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-antd": "^2.2.0",
@@ -33,6 +34,7 @@
     "gatsby-plugin-twitter": "^2.9.0",
     "gatsby-remark-images": "^3.10.0",
     "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-netlify-cms": "^0.10.5",
     "gatsby-transformer-remark": "^2.15.0",
