--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-netlify-cms": "^4.9.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-plugin-twitter": "^2.9.0",
     "gatsby-remark-images": "^3.10.0",
     "gatsby-remark-relative-images": "^2.0.2",
@@ -39,6 +40,7 @@
     "gatsby-source-netlify-cms": "^0.10.5",
     "gatsby-transformer-remark": "^2.15.0",
     "gatsby-transformer-sharp": "^2.10.0",
+    "gsap": "^3.6.0",
     "jquery": "^3.5.1",
     "netlify-cms-app": "^2.14.14",
     "popper.js": "^1.16.1",
