--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "gatsby": "^2.31.0",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-antd": "^2.2.0",
+    "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-netlify": "^2.10.0",
     "gatsby-plugin-netlify-cms": "^4.9.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-styled-components": "^3.8.0",
     "gatsby-plugin-transition-link": "^1.20.5",
@@ -48,6 +50,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^6.14.1",
     "react-hover-slideshow": "^2.1.12",
     "react-responsive-carousel": "^3.2.11",
