--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby": "^2.31.0",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-antd": "^2.2.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-netlify": "^2.10.0",
     "gatsby-plugin-netlify-cms": "^4.9.0",
