--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,6 +6,7 @@ backend:
 publish_mode: editorial_workflow
 
 media_folder: "static/images"
+public_folder: "images"
 
 collections:
   - name: "projects"
