--- a/package.json
+++ b/package.json
@@ -14,55 +14,56 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@popperjs/core": "^2.6.0",
+    "@popperjs/core": "^2.9.1",
     "airtable": "^0.10.1",
-    "antd": "^4.10.1",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.31.0",
-    "gatsby-image": "^2.9.0",
-    "gatsby-plugin-antd": "^2.2.0",
+    "gatsby": "^3.1.1",
+    "gatsby-image": "^3.1.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-netlify": "^2.10.0",
-    "gatsby-plugin-netlify-cms": "^4.9.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.12.0",
-    "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-plugin-image": "^1.1.1",
+    "gatsby-plugin-manifest": "^3.1.0",
+    "gatsby-plugin-netlify": "^3.1.0",
+    "gatsby-plugin-netlify-cms": "^5.1.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.1",
+    "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-plugin-transition-link": "^1.20.5",
-    "gatsby-plugin-twitter": "^2.9.0",
-    "gatsby-remark-images": "^3.10.0",
+    "gatsby-plugin-twitter": "^3.1.0",
+    "gatsby-remark-images": "^4.1.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-cloudinary": "^0.1.14",
-    "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-source-filesystem": "^3.1.0",
     "gatsby-source-netlify-cms": "^0.10.5",
-    "gatsby-transformer-remark": "^2.15.0",
-    "gatsby-transformer-sharp": "^2.10.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
     "gsap": "^3.6.0",
-    "jquery": "^3.5.1",
-    "netlify-cms-app": "^2.14.14",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "netlify-cms-app": "^2.14.30",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.14.1",
+    "react-hook-form": "^6.15.5",
     "react-hover-slideshow": "^2.1.12",
-    "react-responsive-carousel": "^3.2.11",
+    "react-responsive-carousel": "^3.2.15",
     "react-scrollspy": "^3.4.3",
     "react-stonecutter": "^0.3.10",
     "rehype-react": "^6.2.0",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "prettier": "2.1.1"
+    "prettier": "^2.2.1"
   },
   "repository": {
     "type": "git",
