--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.9.1",
-    "airtable": "^0.10.1",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
@@ -29,8 +28,8 @@
     "gatsby-plugin-image": "^1.1.1",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-netlify": "^3.1.0",
-    "gatsby-plugin-netlify-cms": "^5.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sass": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.1",
     "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-plugin-transition-link": "^1.20.5",
@@ -39,14 +38,12 @@
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-source-netlify-cms": "^0.10.5",
     "gatsby-transformer-remark": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
+    "graphql": "^15.5.0",
     "gsap": "^3.6.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
-    "netlify-cms-app": "^2.14.30",
-    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -54,11 +51,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.5",
-    "react-hover-slideshow": "^2.1.12",
-    "react-responsive-carousel": "^3.2.15",
-    "react-scrollspy": "^3.4.3",
-    "react-stonecutter": "^0.3.10",
     "rehype-react": "^6.2.0",
+    "sass": "^1.32.8",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.3"
   },
