--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.9.1",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
-    "gatsby": "^3.1.1",
-    "gatsby-image": "^3.1.0",
+    "gatsby": "^3.14.6",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^1.1.1",
+    "gatsby-plugin-image": "^1.14.2",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-netlify": "^3.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
@@ -33,7 +33,7 @@
     "gatsby-plugin-sharp": "^3.1.1",
     "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-plugin-transition-link": "^1.20.5",
-    "gatsby-plugin-twitter": "^3.1.0",
+    "gatsby-plugin-twitter": "^4.22.0",
     "gatsby-remark-images": "^4.1.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-cloudinary": "^0.1.14",
@@ -57,6 +57,9 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/react": "^18.0.18",
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.26",
     "prettier": "^2.2.1"
   },
   "repository": {
