--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
@@ -18,9 +18,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@popperjs/core": "^2.9.1",
     "babel-plugin-styled-components": "^1.12.0",
-    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "gatsby": "^3.14.6",
     "gatsby-image": "^3.11.0",
@@ -28,13 +26,12 @@
     "gatsby-plugin-image": "^1.14.2",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-netlify": "^3.1.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
-    "gatsby-plugin-sass": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^3.1.1",
-    "gatsby-plugin-styled-components": "^4.1.0",
+    "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-transition-link": "^1.20.5",
-    "gatsby-plugin-twitter": "^4.22.0",
-    "gatsby-remark-images": "^4.1.0",
+    "gatsby-plugin-twitter": "^3.1.0",
+    "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "^3.1.0",
@@ -42,17 +39,13 @@
     "gatsby-transformer-sharp": "^3.1.0",
     "graphql": "^15.5.0",
     "gsap": "^3.6.0",
-    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
-    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.5",
     "rehype-react": "^6.2.0",
-    "sass": "^1.32.8",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.3"
   },
