--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-cloudinary": "^3.0.0",
     "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.14.0",
     "graphql": "^15.5.0",
