--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@netlify/functions": "^1.4.0",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^8.2.0",
     "gatsby": "^3.14.6",
@@ -54,6 +55,7 @@
     "@types/react": "^18.0.18",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.26",
+    "netlify-cli": "^13.0.0",
     "prettier": "^2.2.1"
   },
   "repository": {
