--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.278.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@netlify/functions": "^1.4.0",
+    "@sendgrid/mail": "^7.7.0",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^8.2.0",
     "gatsby": "^3.14.6",
@@ -49,6 +51,7 @@
     "react-hook-form": "^6.15.5",
     "rehype-react": "^6.2.0",
     "styled-components": "^5.2.1",
+    "twilio": "^4.8.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
