--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^4.2.0",
@@ -27,45 +27,48 @@
     "@tensorflow/tfjs-node": "^4.2.0",
     "@netlify/functions": "^1.4.0",
     "@sendgrid/mail": "^7.7.0",
-    "babel-plugin-styled-components": "^1.12.0",
-    "dotenv": "^8.2.0",
-    "gatsby": "^3.14.6",
+    "babel-plugin-styled-components": "^2.0.7",
+    "dotenv": "^16.0.3",
+    "gatsby": "^5.7.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^1.14.2",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^3.14.3",
-    "gatsby-plugin-styled-components": "^3.10.0",
+    "gatsby-plugin-image": "^3.7.0",
+    "gatsby-plugin-manifest": "^5.7.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-react-helmet": "^6.7.0",
+    "gatsby-plugin-sharp": "^5.7.0",
+    "gatsby-plugin-styled-components": "^6.7.0",
     "gatsby-plugin-transition-link": "^1.20.5",
-    "gatsby-plugin-twitter": "^3.14.0",
-    "gatsby-remark-images": "^3.11.1",
+    "gatsby-plugin-twitter": "^5.7.0",
+    "gatsby-remark-images": "^7.7.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-source-cloudinary": "^0.1.14",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-cloudinary": "^3.0.0",
-    "gatsby-transformer-remark": "^3.2.0",
-    "gatsby-transformer-sharp": "^3.14.0",
-    "graphql": "^15.5.0",
-    "gsap": "^3.6.0",
+    "gatsby-source-cloudinary": "^0.4.0",
+    "gatsby-source-filesystem": "^5.7.0",
+    "gatsby-transformer-cloudinary": "^4.3.1",
+    "gatsby-transformer-remark": "^6.7.0",
+    "gatsby-transformer-sharp": "^5.7.0",
+    "graphql": "^16.6.0",
+    "gsap": "^3.11.4",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.5",
-    "rehype-react": "^6.2.0",
-    "styled-components": "^5.2.1",
+    "react-hook-form": "^7.43.5",
+    "rehype-react": "^7.1.2",
+    "styled-components": "^5.3.8",
     "twilio": "^4.8.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.18",
-    "@types/react-helmet": "^6.1.5",
+    "@types/react": "^18.0.28",
+    "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
-    "netlify-cli": "^13.0.0",
-    "prettier": "^2.2.1"
+    "netlify-cli": "^13.1.2",
+    "prettier": "^2.8.4"
+  },
+  "resolutions": {
+    "@types/react": "react"
   },
   "repository": {
     "type": "git",
