--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.278.0",
@@ -19,14 +19,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@netlify/functions": "^1.4.0",
+    "@sendgrid/mail": "^7.7.0",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^4.2.0",
     "@tensorflow/tfjs-converter": "^4.2.0",
     "@tensorflow/tfjs-core": "^4.2.0",
     "@tensorflow/tfjs-node": "^4.2.0",
-    "@netlify/functions": "^1.4.0",
-    "@sendgrid/mail": "^7.7.0",
     "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.3",
     "gatsby": "^5.7.0",
@@ -61,9 +61,18 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
     "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
+    "babel-jest": "^29.5.0",
+    "babel-preset-gatsby": "^3.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "netlify-cli": "^13.1.2",
     "prettier": "^2.8.4"
   },
