--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
     "outDir": "./public",
-    "types": ["react"]
+    "types": ["react", "jest"]
   },
   "include": ["./src/**/*"],
   "exclude": ["./src/images/*"],
