--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "outDir": "./public"
+    "outDir": "./public",
   },
   "include": ["./src/**/*"],
   "exclude": ["./src/images/*"],
